--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "google-auth-library": "^10.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
     "validator": "^13.15.15"
   }
